<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_login"
        android:orderInCategory="1"
        android:title="@string/action_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_forgot_password"
        android:orderInCategory="2"
        android:title="@string/action_forgot_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_register"
        android:orderInCategory="3"
        android:title="@string/action_register"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="5"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_register_school"
        android:orderInCategory="6"
        android:title="@string/action_register_school"
        app:showAsAction="never" />
</menu>
